--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
+    "axois": "^0.0.1-security",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
